# esp-wol-server

./: .gitignore  CMakeLists.txt  README.md  partitions.csv
main/: CMakeLists.txt  Kconfig.projbuild  UsbSerial.c  UsbSerial.h  Wifi.c  Wifi.h  esp-wol-server.cpp  nvs_w.hpp  spiffs.c  spiffs.h  udp_client.c  udp_client.h  util.cpp  util.h
main/html/: root_get.html
